typescript/checker/tests/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement4.ts.stderr
error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement4.ts:1:15
  |
1 | var v = { get foo() { return } };
  |               ^^^

